# bin-eval-impl

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: sample_document.txt  sample_schema.json
scripts/: debug_decompose.py
src/bin_eval/: __init__.py  decomposer.py  evaluators.py  extractor.py  llm.py  main.py  metrics.py  pipeline.py  prompts.py  schemas.py  updates.py
tests/: test_decomposer.py  test_evaluators.py  test_metrics.py  test_pipeline.py  test_schemas.py  test_updates.py
